Colaboratory를 통해 생성됨

--- a/Machine_Learning/4. 최근접_이웃(K_Nearest_Neighbor).ipynb
+++ b/Machine_Learning/4. 최근접_이웃(K_Nearest_Neighbor).ipynb
@@ -671,7 +671,8 @@
         "id": "c0hBhsA5t9gm"
       },
       "source": [
-        "tsne = TSNE(n_components = 2)\n",
+        "# 차원 축소(t-sne) - 비선형 방법의 차원 축소, 고차원의 데이터셋을 시각화하는 데 좋음\n",
+        "tsne = TSNE(n_components = 2) # 줄이고 싶은 차원의 개수\n",
         "X_comp = tsne.fit_transform(X)"
       ],
       "execution_count": null,
