--- a/NLP/6. 순환_신경망(Recurrent_Neural_Network).ipynb
+++ b/NLP/6. 순환_신경망(Recurrent_Neural_Network).ipynb
@@ -927,12 +927,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "DSIBuLeDGoMD"
+        "id": "DSIBuLeDGoMD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3cc8109c-75b6-4bf4-b765-b904333b98e7"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-2551b763f0d9>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    ....(\"\")\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
+      "source": [
+        ",...."
+      ]
     },
     {
       "cell_type": "markdown",
